*Change geturl calls to use formatQuery instead
 of custom sanitize proc.
+Add error message that is displayed when there
 is an error get show info.
*Change showinfo geturl calls to asynchronous
 calls.
*Change schedule caching geturl calls to
 asynchronous calls.
+Add endedyear, endedmonth, and endedday 
 options for show info.
+Add ability to do "not exists" conditionals
 in templates.

2.0b5
-----
*Fixed bug introduced in 2.0b4 which caused
 schedule lines to be built improperly.
*Fixed bug causing changes to scheduleTimeFormat
 to cause script to error out.
 
2.0b4
-----
*Fixed error in the way schedule lines were
 built which prevented a newline being used
 as a seperator.

2.0b3
-----
*Changed excludedNetworks variable name to
 filteredNetworks.
+Added includeOnlyFiltered setting to change
 the behavior have the filteredNetworks list.

2.0b2
-----
*Fixed several bugs related to custom triggers.

2.0b1
-----
+Preliminary custom trigger support.  See Custom
 Triggers section of README for more information.

1.4
---
*Changed the way time since latest/until next episode
 is calculated to handle shows that air multiple
 times a week.
*Updated URLs used in tvrage.conf.defaults to reflect
the new URLs.

1.3
---
*Fixed long standing memory leak. (hopefully)
-Removed old debug statement that slipped through the 
 cracks.
*Fix bug in convertToSxEp method causing season to
 be used for episode number.
*Fixed showinfo failing when airtime was unknown.

1.2
---
+Added nextTimeUntil and latestTimeUntil template
 settings to display the time until the next episode
 airs and time since the last episode has aired,
 respectively.

1.1
---
*Quick fix to the summary parsing logic to strip out 
 certain html tags.  Should be revisited and have a
 proper HTML tag stripper added at a later point.

1.0
---
*Removed die commands and replaced with putlog error
 messages.
+Check for tcl version to determine if dict is needed or
 not.

1.0 RC2
-------